--- a/Homework08_React/CegekaAcademy2021.Session9Homework-main/package.json
+++ b/Homework08_React/CegekaAcademy2021.Session9Homework-main/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.0.0",
+    "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-images": "^0.5.19",
+    "react-redux": "^7.2.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.75.1"
+    "semantic-ui-react": "^0.75.1",
+    "fbjs": "^0.8.16"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
